# ESP32-S2_Drivers

.github/workflows/: ci.yml
MCAL/: CMakeLists.txt  ESP32_S2_SOLO_2_N4R2_Main.h  MCAL_Config.h
MCAL/GPIO/: MCAL_ESP32_S2_SOLO_2_N4R2_GPIO.c  MCAL_ESP32_S2_SOLO_2_N4R2_GPIO.h
MCAL/NVS/: MCAL_ESP32_S2_SOLO_2_N4R2_NVS.h
MCAL/UART/: MCAL_ESP32_S2_SOLO_2_N4R2_UART.c  MCAL_ESP32_S2_SOLO_2_N4R2_UART.h
MCAL/WIFI/: MCAL_ESP32_S2_SOLO_2_N4R2_WIFI.c  MCAL_ESP32_S2_SOLO_2_N4R2_WIFI.h
main/: CMakeLists.txt  main.c  middleware.c  middleware.h
main/MCAL/: CMakeLists.txt  ESP32_S2_SOLO_2_N4R2_Main.h
main/MCAL/GPIO/: MCAL_ESP32_S2_SOLO_2_N4R2_GPIO.c  MCAL_ESP32_S2_SOLO_2_N4R2_GPIO.h
main/MCAL/NVS/: MCAL_ESP32_S2_SOLO_2_N4R2_NVS.c  MCAL_ESP32_S2_SOLO_2_N4R2_NVS.h
main/MCAL/UART/: MCAL_ESP32_S2_SOLO_2_N4R2_UART.c  MCAL_ESP32_S2_SOLO_2_N4R2_UART.h
